[tool.fastapi]
entrypoint = "src.app.main:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my-fastapi-app"
version = "0.1.0"
dependencies = [
    "fastapi[standard]",
    "bcrypt",
    "sqlalchemy",
    "psycopg2",
    "PyJWT",
]
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
]